Category Create and Login

--- a/WebUI/Areas/Admin/Views/Category/Create.cshtml
+++ b/WebUI/Areas/Admin/Views/Category/Create.cshtml
@@ -1,1 +1,24 @@
-﻿Here is Create
+﻿
+
+<div class="container">
+    <div class="row">
+        <div class="col-8 m-auto">
+            <form method="post">
+                <div class="card mt-4">
+                    <div class="card-header">
+                        Category
+                    </div>
+                    <div class="card-body">
+                        <div class="form-group">
+                            <label for="categoryName">Category Name</label>
+                            <input class="form-control" type="text" name="Name" id="categoryName" placeholder="Enter Category Name" />
+                        </div>
+                    </div>
+                    <div class="card-footer">
+                        <input type="submit" class="btn btn-primary" value="Submit"/>
+                    </div>
+                </div>
+            </form>
+        </div>
+    </div>
+</div>
