--- a/WebUI/Areas/Admin/Views/Shared/_AdminLayout.cshtml
+++ b/WebUI/Areas/Admin/Views/Shared/_AdminLayout.cshtml
@@ -215,13 +215,13 @@ scratch. This page gets rid of all links and provides the needed markup only.
                             </a>
                             <ul class="nav nav-treeview">
                                 <li class="nav-item">
-                                    <a href="pages/charts/chartjs.html" class="nav-link">
+                                    <a asp-area="Admin" asp-action="Index" asp-controller="Category" class="nav-link">
                                         <i class="far fa-circle nav-icon"></i>
                                         <p>Category</p>
                                     </a>
                                 </li>
                                 <li class="nav-item">
-                                    <a href="pages/charts/flot.html" class="nav-link">
+                                    <a href="admin/subcategory" class="nav-link">
                                         <i class="far fa-circle nav-icon"></i>
                                         <p>SubCategory</p>
                                     </a>
