--- a/WebUI/Areas/Admin/Views/Shared/_AdminLayout.cshtml
+++ b/WebUI/Areas/Admin/Views/Shared/_AdminLayout.cshtml
@@ -221,7 +221,7 @@ scratch. This page gets rid of all links and provides the needed markup only.
                                     </a>
                                 </li>
                                 <li class="nav-item">
-                                    <a href="admin/subcategory" class="nav-link">
+                                    <a asp-area="Admin" asp-action="Index" asp-controller="SubCategory" class="nav-link">
                                         <i class="far fa-circle nav-icon"></i>
                                         <p>SubCategory</p>
                                     </a>
