--- a/WebUI/Areas/Admin/Views/Shared/_AdminLayout.cshtml
+++ b/WebUI/Areas/Admin/Views/Shared/_AdminLayout.cshtml
@@ -236,6 +236,33 @@ scratch. This page gets rid of all links and provides the needed markup only.
                             <a href="#" class="nav-link">
                                 <i class="nav-icon fas fa-chart-pie"></i>
                                 <p>
+                                    Positions
+                                    <i class="right fas fa-angle-left"></i>
+                                </p>
+                            </a>
+                            <ul class="nav nav-treeview">
+                                <li class="nav-item">
+                                    <a href="/admin/role" class="nav-link">
+                                        <i class="far fa-circle nav-icon"></i>
+                                        <p>Role List</p>
+                                    </a>
+                                </li>
+                                <li class="nav-item">
+                                    <a href="/admin/userrole" class="nav-link">
+                                        <i class="far fa-circle nav-icon"></i>
+                                        <p>User List</p>
+                                    </a>
+                                </li>
+                            </ul>
+                        </li>
+                        <!-- Nan Item End -->
+
+
+                        <!-- Nan Item Start -->
+                        <li class="nav-item">
+                            <a href="#" class="nav-link">
+                                <i class="nav-icon fas fa-chart-pie"></i>
+                                <p>
                                     Charts
                                     <i class="right fas fa-angle-left"></i>
                                 </p>
