--- a/WebUI/Areas/Admin/Views/_ViewImports.cshtml
+++ b/WebUI/Areas/Admin/Views/_ViewImports.cshtml
@@ -1,3 +1,4 @@
 ﻿@using Entities.Concrete;
 @using Core.Entities.Concrete;
+@using WebUI.Areas.Admin.ViewModels;
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
