--- a/WebUI/Areas/Admin/Views/Shared/_AdminLayout.cshtml
+++ b/WebUI/Areas/Admin/Views/Shared/_AdminLayout.cshtml
@@ -256,7 +256,31 @@ scratch. This page gets rid of all links and provides the needed markup only.
                             </ul>
                         </li>
                         <!-- Nan Item End -->
-
+                        <!-- Nan Item Start -->
+                        <li class="nav-item">
+                            <a href="#" class="nav-link">
+                                <i class="nav-icon fas fa-chart-pie"></i>
+                                <p>
+                                    Products
+                                    <i class="right fas fa-angle-left"></i>
+                                </p>
+                            </a>
+                            <ul class="nav nav-treeview">
+                                <li class="nav-item">
+                                    <a href="/admin/product" class="nav-link">
+                                        <i class="far fa-circle nav-icon"></i>
+                                        <p>Product List</p>
+                                    </a>
+                                </li>
+                                <li class="nav-item">
+                                    <a href="#" class="nav-link">
+                                        <i class="far fa-circle nav-icon"></i>
+                                        <p>Order List</p>
+                                    </a>
+                                </li>
+                            </ul>
+                        </li>
+                        <!-- Nan Item End -->
 
                         <!-- Nan Item Start -->
                         <li class="nav-item">
