--- a/WebUI/Areas/Admin/Views/Shared/_AdminLayout.cshtml
+++ b/WebUI/Areas/Admin/Views/Shared/_AdminLayout.cshtml
@@ -197,14 +197,13 @@ scratch. This page gets rid of all links and provides the needed markup only.
                             <a href="/admin" class="nav-link">
                                 <i class="nav-icon fas fa-th"></i>
                                 <p>
-                                   Dashboard
+                                    Dashboard
                                     @*<span class="right badge badge-danger">New</span>*@
                                 </p>
                             </a>
                         </li>
 
-
-                        <!-- Nan Item Start -->
+                        <!-- Nav item start -->
                         <li class="nav-item">
                             <a href="#" class="nav-link">
                                 <i class="nav-icon fas fa-chart-pie"></i>
@@ -215,23 +214,21 @@ scratch. This page gets rid of all links and provides the needed markup only.
                             </a>
                             <ul class="nav nav-treeview">
                                 <li class="nav-item">
-                                    <a asp-area="Admin" asp-action="Index" asp-controller="Category" class="nav-link">
+                                    <a href="/admin/category" class="nav-link">
                                         <i class="far fa-circle nav-icon"></i>
                                         <p>Category</p>
                                     </a>
                                 </li>
                                 <li class="nav-item">
-                                    <a asp-area="Admin" asp-action="Index" asp-controller="SubCategory" class="nav-link">
+                                    <a href="/admin/subcategory" class="nav-link">
                                         <i class="far fa-circle nav-icon"></i>
-                                        <p>SubCategory</p>
+                                        <p>Subcategory</p>
                                     </a>
                                 </li>
                             </ul>
                         </li>
-                        <!-- Nan Item End -->
-
-
-                        <!-- Nan Item Start -->
+                        <!-- Nav item end -->
+                        <!-- Nav item start -->
                         <li class="nav-item">
                             <a href="#" class="nav-link">
                                 <i class="nav-icon fas fa-chart-pie"></i>
@@ -244,19 +241,19 @@ scratch. This page gets rid of all links and provides the needed markup only.
                                 <li class="nav-item">
                                     <a href="/admin/role" class="nav-link">
                                         <i class="far fa-circle nav-icon"></i>
-                                        <p>Role List</p>
+                                        <p>Role list</p>
                                     </a>
                                 </li>
                                 <li class="nav-item">
                                     <a href="/admin/userrole" class="nav-link">
                                         <i class="far fa-circle nav-icon"></i>
-                                        <p>User List</p>
+                                        <p>User roles</p>
                                     </a>
                                 </li>
                             </ul>
                         </li>
-                        <!-- Nan Item End -->
-                        <!-- Nan Item Start -->
+                        <!-- Nav item end -->
+                        <!-- Nav item start -->
                         <li class="nav-item">
                             <a href="#" class="nav-link">
                                 <i class="nav-icon fas fa-chart-pie"></i>
@@ -275,14 +272,13 @@ scratch. This page gets rid of all links and provides the needed markup only.
                                 <li class="nav-item">
                                     <a href="#" class="nav-link">
                                         <i class="far fa-circle nav-icon"></i>
-                                        <p>Order List</p>
+                                        <p>Order list</p>
                                     </a>
                                 </li>
                             </ul>
                         </li>
-                        <!-- Nan Item End -->
-
-                        <!-- Nan Item Start -->
+                        <!-- Nav item end -->
+                        <!-- Nav item start -->
                         <li class="nav-item">
                             <a href="#" class="nav-link">
                                 <i class="nav-icon fas fa-chart-pie"></i>
@@ -318,7 +314,7 @@ scratch. This page gets rid of all links and provides the needed markup only.
                                 </li>
                             </ul>
                         </li>
-                        <!-- Nan Item End -->
+                        <!-- Nav item end -->
 
 
                     </ul>
@@ -362,4 +358,3 @@ scratch. This page gets rid of all links and provides the needed markup only.
     <script src="~/admin/dist/js/adminlte.min.js"></script>
 </body>
 </html>
-
