--- a/WebUI/Areas/Admin/Views/Product/Create.cshtml
+++ b/WebUI/Areas/Admin/Views/Product/Create.cshtml
@@ -1,52 +1,65 @@
-﻿
+﻿@model IEnumerable<SubCategory>
+
 
 <div class="container">
     <div class="row">
-        <div class="col-8 m-auto">
-            <form method="post" enctype="multipart/form-data">
-                <div class="card mt-4">
+        <div class="col-12 m-auto">
+            <form id="ProductForm" method="post" enctype="multipart/form-data">
+                <div class="card mt-5">
                     <div class="card-header">
-                        Productt
+                        Product
                     </div>
                     <div class="card-body">
                         <div class="form-group">
-                            <label for="productName">Product Name</label>
-                            <input class="form-control" type="text" name="Name" id="productName" placeholder="Product Name" />
+                            <label for="productName">Product name</label>
+                            <input class="form-control" placeholder="Enter product name" type="text" name="Name" id="productName" />
                         </div>
 
                         <div class="form-group">
-                            <label for="price">Product Price</label>
-                            <input class="form-control" type="number" name="Price" step=".01" id="price" placeholder="Price" />
+                            <label for="price">Product price</label>
+                            <input class="form-control" placeholder="Enter product price" type="number" step=".01" name="Price" id="price" />
                         </div>
 
                         <div class="form-group">
-                            <label for="Quantity">Product Quantity</label>
-                            <input class="form-control" type="number" name="Quantity" step=".01" id="Quantity" placeholder="Quantity" />
+                            <label for="Quantity">Product quantity</label>
+                            <input class="form-control" placeholder="Enter product quantity" type="number" step=".01" name="Quantity" id="Quantity" />
                         </div>
 
                         <div class="form-group">
-                            <label for="Description">Description</label>
-                            <input class="form-control" type="text" name="Description" id="Description" placeholder="Description" />
+                            <label for="FromAuthor">Product from author</label>
+                            <input class="form-control" placeholder="Enter from author" type="text" name="FromAuthor" id="FromAuthor" />
                         </div>
 
                         <div class="form-group">
-                            <label for="FromAuthor">FromAuthor</label>
-                            <input class="form-control" type="text" name="FromAuthor" id="FromAuthor" placeholder="FromAuthor" />
+                            <label for="Description">Product description</label>
+                            <input class="form-control" placeholder="Enter product description" type="text" name="Description" id="Description" />
                         </div>
 
                         <div class="form-group">
-                            <label for="AdditionalInformation">AdditionalInformation</label>
-                            <input class="form-control" type="text" name="AdditionalInformation" id="AdditionalInformation" placeholder="AdditionalInformation" />
+                            <label for="AdditionalInformation">Additional information</label>
+                            <input class="form-control" placeholder="Additional information" type="text" name="AdditionalInformation" id="AdditionalInformation" />
                         </div>
 
                         <div class="form-group">
-                            <label for="ProductPicture">Upload Images</label>
-                            <input type="file" name="myPhoto" multiple id="ProductPicture" />
+                            <label>Subcategories</label>
+                            <select name="SubCategoryId" class="form-control">
+                                @foreach (var subCategory in Model)
+                                {
+                                    <option value="@subCategory.Id">@subCategory.Name</option>
+                                }
+                            </select>
+                        </div>
+
+                        <div class="form-group">
+                            <label for="ProductPicture">Upload Image</label>
+                            <input name="myPhoto" type="file" multiple id="ProductPicture" />
+                            <div id="ProductPictures" class="row mt-5">
+                            </div>
                         </div>
                     </div>
 
                     <div class="card-footer">
-                        <input type="submit" class="btn btn-primary" value="Submit" />
+                        <input id="btnSubmit" type="submit" class="btn btn-primary" value="Submit" />
                     </div>
                 </div>
             </form>
@@ -56,25 +69,67 @@
 
 <script src="https://code.jquery.com/jquery-3.6.1.min.js"></script>
 <script>
-    
-    $("#ProductPicture").change(function(){
-        let pictures =this.files;
-        let picsData =new FormData();
 
-        for(let i =0; i<pictures.length; i++)
-        {
-            picsData.append('Picture',pictures[i])
+
+    $("#ProductPicture").change(function () {
+
+        let pictures = this.files;
+        let picsData = new FormData();
+
+        for (let i = 0; i < pictures.length; i++) {
+            picsData.append('Picture', pictures[i])
         }
 
         $.ajax({
-            url:"/Admin/Picture/Upload",
-            type:"POST",
-            data:picsData,
-            processData:false,
-            contentType:false
-        }).done(function(res){
+            url: "/Admin/Picture/Upload",
+            type: "POST",
+            data: picsData,
+            processData: false,
+            contentType: false
+        }).done(function (res) {
             console.log(res)
+            for (let i = 0; i < res.length; i++) {
+                AddCard(res[i].id, res[i].photoUrl)
+            }
         })
     })
+
+    function AddCard(pictureId, pictureUrl) {
+        var cardDesign = `
+            <div id="card_${pictureId}" class="col-lg-3">
+                <div class="card">
+                    <div class="card-header d-flex justify-content-end">
+                        <i onclick="RemoveFromCard(${pictureId})" class="far fa-times-circle"></i>
+                    </div>
+                    <img class="img-fluid" src="${pictureUrl}" />
+                    <input type="hidden" value="${pictureId}" name="pictureIds" />
+                </div>
+            </div>
+                    `
+        var productCard = document.getElementById("ProductPictures");
+
+        productCard.innerHTML += cardDesign;
+    }
+
+    function RemoveFromCard(cardId) {
+        let removingCard = document.getElementById(`card_${cardId}`)
+        removingCard.remove();
+    }
+
+        //$("#btnSubmit").click(function(e){
+        //    e.preventDefault()
+        //    var myFormData = $("form").serialize()
+
+
+        //    $.ajax({
+        //        url: "/Admin/Product/Create",
+        //        type: "POST",
+        //        data: picsData,
+        //        processData: false,
+        //        contentType: false
+        //    }).done(function (res) {
+        //        console.log(res)
+        //    })
+        //})
 
 </script>
